Database_Integration: standalone multi-language, multi-fund examples
Rework Database_Integration so a developer finds a runnable, heavily-commented
example in their own language for BOTH directions (FundsXML -> DB, DB ->
FundsXML), handling multiple nodes (>=2 Funds, multi-Portfolio/Position/
ShareClass/Asset).

- ddl/schema.sql: redesigned multi-fund model (document -> fund -> portfolio
  -> position; share_class per fund; document-scoped asset) with 1-based
  ordinals so order/duplicates round-trip exactly.
- Standalone same-CLI programs (init/import/export/roundtrip), all verified
  locally to produce import==export:
    python/fundsxml_db.py        (stdlib sqlite3 + lxml)
    java/FundsXmlDb.java         (sqlite-jdbc, native javax.xml, no JAXB)
    javascript/fundsxml_db.mjs   (sql.js + @xmldom/xmldom + xpath)
    csharp/FundsXmlDb.cs(+csproj) (Microsoft.Data.Sqlite)
- tools/xml_equiv.py: shared normalized comparator proving import file ==
  export file (ignores DocumentGenerated timestamp + numeric/whitespace/attr
  ordering; child order significant); always paired with XSD validation.
- FundsXML_Files/4.2.9/positions/Multi-Fund_Positions.xml: round-trip-faithful
  multi-fund fixture (2 funds, one with 2 portfolios), XSD-valid.
- Oracle/SQLServer/Postgres load+generate SQL updated to the multi-fund
  nested-XMLTABLE / grouped-XMLAGG / FOR XML pattern (code references).
- Data_Binding_JSON/python/fundsxml_json.py reworked to the multi-fund shape
  (lossless -> xml_equiv-equal on the fixture).
- tools/fetch-tools.sh fetches sqlite-jdbc; CI runs the multi-fund round-trip
  in all 4 languages (equivalence + XSD + cross-language) plus the single-fund
  sample; setup-node and setup-dotnet added. .gitignore: node_modules, bin/
  obj/, macOS metadata.

Verified locally: every language's export is xml_equiv-equal to the fixture
and to each other, and XSD-valid; Mixed-Fund (n=1) still round-trips.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>